--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,11 @@
             android:launchMode="singleInstance"
             android:screenOrientation="fullSensor" />
         <activity
+            android:name=".activities.DepotInfoParamActivity"
+            android:configChanges="orientation"
+            android:launchMode="singleInstance"
+            android:screenOrientation="fullSensor" />
+        <activity
             android:name=".activities.MapActivity"
             android:configChanges="orientation"
             android:launchMode="singleInstance"
