add notification driver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,17 @@
             android:launchMode="singleInstance"
             android:screenOrientation="fullSensor" />
         <activity
-            android:name=".activities.AddDepotActivity"
+        android:name=".activities.AddDepotActivity"
+        android:configChanges="orientation"
+        android:launchMode="singleInstance"
+        android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".activities.NotificationsActivity"
+            android:configChanges="orientation"
+            android:launchMode="singleInstance"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".activities.AddNotificationActivity"
             android:configChanges="orientation"
             android:launchMode="singleInstance"
             android:screenOrientation="fullSensor" />
